--- a/index.html
+++ b/index.html
@@ -349,75 +349,75 @@
                     <li>
                         <div class="title">Detecting Kernel Refcount Bugs with Two-Dimensional Consistency Checking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Xiyu Yang, Kangjie Lu, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium, Security’21, Vancouver, Canada, August 11-13, 2021 (coming soon).
+                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium (USENIX Security), Vancouver, Canada, August 11-13, 2021 (coming soon).
                         </div>
                     </li>   
                     <li>
                         <div class="title">Enhancing State-of-the-art Classifiers with API Semantics to Detect Evolved Android Malware.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Ming Zhong, Daizong Ding, Yinzhi Cao, Yukun Zhang, Mi Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020.
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020.
                             <a href="./paper/apigraph-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>               
                     <li>
                         <div class="title">PDiff: Semantic-based Patch Presence Testing for Downstream Kernels.</div>
                         <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Qi Wen, Zhenghe Wang, Xiaohan Zhang, Xinyu Xing, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS'20, Orlando, USA, November 9-13, 2020.
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020.
                             <a href="./paper/pdiff-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">BScout: Direct Whole Patch Presence Test for Java Executables.</div>
                         <div class="author">Jiarun Dai, Yuan Zhang, Zheyue Jiang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020.
+                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 12-14, 2020.
                             <a href="./paper/bscout-security20.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">An Ever-evolving Game: Evaluation of Real-world Attacks and Defenses in Ethereum Ecosystem.</div>
                         <div class="author">Shunfan Zhou, Zhemin Yang, Jie Xiang, Yinzhi Cao, Min Yang, Yuan Zhang.</div>
-                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020.
+                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium (USENIX Security), Boston, MA, USA, August 12-14, 2020.
                             <a href="./paper/smart-contract-security20.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">How Android Developers Handle Evolution-induced API Compatibility Issues: A Large-scale Study.</div>
                         <div class="author">Hao Xia, Yuan Zhang, Yingtian Zhou, Xiaoting Chen, Yang Wang, Xiangyu Zhang, Shuaishuai Cui, Gen Hong, Xiaohan Zhang, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering, ICSE'20, Seoul, South Korea, May 23-29, 2020.
+                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering (ICSE), Seoul, South Korea, May 23-29, 2020.
                             <a href="./paper/rapid-icse20.pdf">[Paper]</a>
                         </div>
                     </li> 
                     <li>
                         <div class="title">TextExerciser: Feedback-driven Text Input Exercising for Android Applications.</div>
                         <div class="author">Yuyu He, Lei Zhang, Zhemin Yang, Yinzhi Cao, Keke Lian, Shuai Li, Wei Yang, Zhibo Zhang, Min Yang, Yuan Zhang, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 41st IEEE Symposium on Security and Privacy, Oakland'20, San Francisco, CA, May 18-20, 2020.
+                        <div class="venue">In Proceedings of the 41st IEEE Symposium on Security and Privacy (S&P), San Francisco, CA, May 18-20, 2020.
                             <a href="./paper/te-oakland20.pdf">[Paper]</a>
                         </div>
                     </li>  
                     <li>
                         <div class="title">Hybrid Malware Detection Approach with Feedback-directed Machine Learning.</div>
                         <div class="author">Zhetao Li, Wenlin Li, Fuyuan Lin, Yi Sun, Min Yang, Yuan Zhang, Zhibo Wang.</div>
-                        <div class="venue">In SCIENCE CHINA Information Sciences, Volume 63, Issue 3: 139103(2020)
+                        <div class="venue">In SCIENCE CHINA Information Sciences, Volume 63, Issue 3: 139103 (2020)
                         </div>
                     </li>
                     <li>
                         <div class="title">App in the Middle : Demystify Application Virtualization in Android and its Security Threats to over 100 Million Users.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Mingqi Li, Sen Yang, Min Yang, Yuan Zhang, Zhiun Qian.</div>
-                        <div class="venue">In Proceedings of ACM SIGMETRICS / IFIP Performance 2019, Phoenix, Arizona, USA.
+                        <div class="venue">In Proceedings of ACM SIGMETRICS / IFIP Performance, Phoenix, Arizona, USA, 2019.
                                 <a href="./paper/app_virtualization_sigmetrics19.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">How You Get Shot in the Back: A Systematical Study about Cryptojacking in the Real World.</div>
                         <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
+                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security (CCS), Toronto, Canada, October 15-19, 2018.
                                 <a href="./paper/cmtracker-ccs2018.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Invetter: Locating Insecure Input Validations in Android Services.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Zhenyu Zhang, Zhiyun Qian, Geng Hong, Yuan Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
+                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security (CCS), Toronto, Canada, October 15-19, 2018.
                                 <a href="./paper/invetter-ccs2018.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -432,7 +432,7 @@
                     <li>
                         <div class="title">Detecting Third-Party Libraries in Android Applications with High Precision and Recall.</div>
                         <div class="author">Yuan Zhang, Jiarun Dai, Xiaohan Zhang, Sirong Huang, Zhemin Yang, Min Yang, Hao Chen.</div>
-                        <div class="venue">In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER’18, Campobasso, Italy, March 20-23, 2018. 
+                        <div class="venue">In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering (SANER), Campobasso, Italy, March 20-23, 2018. 
                             <a href="./paper/libpecker-saner2018.pdf">[Paper]</a>
 							<a href="https://github.com/yuanxzhang/LibPecker">[Source Code]</a>
                         </div>
@@ -440,7 +440,7 @@
                     <li>
                         <div class="title">Finding Clues for Your Secrets: Semantics-Driven, Learning-Based Privacy Discovery in Mobile Apps.</div>
                         <div class="author">Yuhong Nan, Zhemin Yang, Xiaofeng Wang, Yuan Zhang, Donglai Zhu, Min Yang.</div>
-                        <div class="venue">In Proceedings of Network and Distributed System Security Symposium, NDSS’18, San Diego, Feb 18-21, 2018.
+                        <div class="venue">In Proceedings of Network and Distributed System Security Symposium (NDSS), San Diego, Feb 18-21, 2018.
                             <a href="./paper/cluefinder-ndss2018.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -461,7 +461,7 @@
                     <li>
                         <div class="title">FineDroid: Enforcing Permissions with System-wide Application Execution Context.</div>
                         <div class="author">Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.</div>
-                        <div class="venue">In Proceedings of the 11th EAI International Conference on Security and Privacy in Communication Networks, SecureComm’15, Dallas, TX, October 26-29, 2015.
+                        <div class="venue">In Proceedings of the 11th EAI International Conference on Security and Privacy in Communication Networks (SecureComm), Dallas, TX, October 26-29, 2015.
                             <a href="./paper/finedroid-securecomm2015.pdf">[Paper]</a>
                         </div>
                     </li>
@@ -482,21 +482,21 @@
                     <li>
                         <div class="title">AppIntent: Analyzing Sensitive Data Transmission in Android for Privacy Leakage Detection.</div>
                         <div class="author">Zhemin Yang, Min Yang, Yuan Zhang, Guofei Gu, Peng Ning and X. Sean Wang.</div>
-                        <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.
+                        <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security (CCS), Berlin, Germany, November 4-8, 2013.
                             <a href="./paper/appintent-ccs2013.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Vetting Undesirable Behaviors in Android Apps with Permission Use Analysis.</div>
                         <div class="author">Yuan Zhang, Min Yang, Bingquan Xu, Zhemin Yang, Guofei Gu, Peng Ning, X. Sean Wang, Binyu Zang.</div>
-                        <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.
+                        <div class="venue">In Proceedings of the 20th ACM Conference on Computer and Communications Security (CCS), Berlin, Germany, November 4-8, 2013.
                             <a href="./paper/vetdroid-ccs2013.pdf">[Paper]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Swift: A Register-based JIT Compiler for Embedded JVMs.</div>
                         <div class="author">Yuan Zhang, Min Yang, Bo Zhou, Zhemin Yang, Weihua Zhang, Binyu Zang.</div>
-                        <div class="venue">In Proceedings of the 8th international conference on Virtual execution environments, VEE’12, London, UK, March 3-4, 2012.
+                        <div class="venue">In Proceedings of the 8th international conference on Virtual execution environments (VEE), London, UK, March 3-4, 2012.
                             <a href="./paper/swift-vee2012.pdf">[Paper]</a>
                         </div>
                     </li>
