--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                     <li>
                         <div class="title">An Empirical Study of Web Resource Manipulation in Real-world Mobile Applications.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Qianqian Mo, Hao Xia, Zhemin Yang, Min Yang, Xiaofeng Wang, Long Lu, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’18, Baltimore, USA, August 15-17, 2018.
+                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium (USENIX Security), Baltimore, USA, August 15-17, 2018.
                             <a href="./paper/xpmchecker-security2018.pdf">[Paper]</a>
                             <a href="https://xhzhang.github.io/XPMChecker/">[Dataset]</a>
                         </div>
@@ -468,7 +468,7 @@
                     <li>
                         <div class="title">AppCracker: Widespread Vulnerabilities in User and Session Authentication in Mobile Apps.</div>
                         <div class="author">Fangda Cai, Hao Chen, Yuanyi Wu, Yuan Zhang.</div>
-                        <div class="venue">In Proceedings of 4th IEEE Mobile Security Technologies (co-located with IEEE S&P), MoST’15, San Jose, CA, May 21, 2015.
+                        <div class="venue">In Proceedings of 4th IEEE Mobile Security Technologies (MoST), co-located with IEEE S&P, San Jose, CA, May 21, 2015.
                             <a href="./paper/appcracker-most2015.pdf">[Paper]</a>
                         </div>
                     </li>
