--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li>
                     <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
                     <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
                         <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
@@ -534,6 +535,7 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
+                    <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
                     <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
                     <li>the 11th ACM Conference on Data and Application Security and Privacy (CODASPY 2021)</i>
                     <li>the 16th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2021)</i>
@@ -573,7 +575,7 @@
             </div>
 
             <br>
-            <center><small>Last Modified: Sep 27, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: Dec 21, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
