--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[March, 2021] Join the TPC of <a href="https://www.ieee-security.org/TC/SP2022/cfpapers.html">S&P 2022</a>. Welcome to submit!</li>
                     <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li>
                     <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
                     <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
@@ -511,7 +512,7 @@
             <div>Undergraduate level:<br>
                 <ul>
                     <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
-                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020</i></li></ul>
+                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020, Spring 2021</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
                         <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019, Fall 2020</i></li></ul>
@@ -525,7 +526,7 @@
             <div>Graduate level:<br>
                 <ul>
                     <li> Emerging Attack & Defense Techniques <i>(in School of Software)</i>
-                        <ul><li><i>Spring 2019, Spring 2020</i></li></ul>
+                        <ul><li><i>Spring 2019, Spring 2020, Spring 2021</i></li></ul>
                     </li>
                     <li> Computer Network Security <i>(in School of Software)</i>
                         <ul><li><i>Spring 2016, Spring 2017, Spring 2018</i></li></ul>
@@ -537,6 +538,7 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
+                    <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
                     <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
                     <li>the 11th ACM Conference on Data and Application Security and Privacy (CODASPY 2021)</i>
@@ -558,7 +560,7 @@
                     <li>IEEE Transactions on Information Forensics and Security (TIFS) 2015</li>
                 </ul>
             </div>
-            <div>Sub-reviewer:<br>
+            <!--div>Sub-reviewer:<br>
                 <ul>
                     <li>CCS 2018, 2019</li>
                     <li>AsiaCCS 2016, 2020</li>
@@ -574,10 +576,10 @@
                     <li>ISC 2014</li>
                     <li>ACSAC 2013, 2014</li>
                 </ul>
-            </div>
+            </div-->
 
             <br>
-            <center><small>Last Modified: Dec 21, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: Feb 1, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
