--- a/index.html
+++ b/index.html
@@ -309,6 +309,12 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[March, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Jiarun! <br/> 
+                        <i>>>> When a vulnerability is discovered by fuzzers on one software version, it is important to assess whether there are other versions that are also affected by this vulneabilty.           
+                            We introduce a new technique, named <b>PoC Migration</b>, to assess the vulnerable versions of a known vulnerability.
+                            In particular, we identified 330 under-reported vulneable versions in MITRE/NIST. </i>             
+                            
+                    </li>
                     <li>[March, 2021] I will join the TPC of <a href="https://www.ieee-security.org/TC/SP2022/cfpapers.html">S&P 2022</a>. Welcome to submit!</li>
                     <li>[Dec, 2020] Join the TPC of <a href="https://esorics2021.athene-center.de/call-for-papers.php">ESORICS 2021</a>. Note that we have two submission cycles this year, welcome to submit! </li>
                     <li>[Oct, 2020] Join the TPC of <a href="https://www.ieee-security.org/TC/EuroSP2021/cfp.html">EuroS&P 2021</a>. Welcome to submit!</li>
@@ -349,7 +355,13 @@
             <hr size=2>
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
-                <ol>    
+                <ol>   
+                    <li>
+                        <div class="title">Facilitating Vulnerability Assessment through PoC Migration.</div>
+                        <div class="author">Jiarun Dai, Yuan Zhang, Hailong Xu, Haiming Lyu, Zicheng Wu, Xinyu Xing, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 28th ACM Conference on Computer and Communications Security (CCS), Seoul, South Korea, November 14-19, 2021 (coming soon).
+                        </div>
+                    </li>    
                     <li>
                         <div class="title">Detecting Kernel Refcount Bugs with Two-Dimensional Consistency Checking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Xiyu Yang, Kangjie Lu, Min Yang.</div>
@@ -359,7 +371,7 @@
                     <li>
                         <div class="title">Enhancing State-of-the-art Classifiers with API Semantics to Detect Evolved Android Malware.</div>
                         <div class="author">Xiaohan Zhang, Yuan Zhang, Ming Zhong, Daizong Ding, Yinzhi Cao, Yukun Zhang, Mi Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020.
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security (CCS), Orlando, USA, November 9-13, 2020. <b>[Nominated for the Best Paper Award]</b>
                             <a href="./paper/apigraph-ccs20.pdf">[Paper]</a>
                         </div>
                     </li>               
