--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             </p-->
             <p style="font-family: Courier New">
                 <b>Email:</b> yuanxzhang [AT] fudan.edu.cn <br>
-                <del><b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai</del> <br>
+                <!-- <del><b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai</del> <br> -->
                 <b>Office (Jiangwan Campus):</b> Room A6013, NO.2 Interdisciplinary Building, NO.2005 Songhu Road, Yangpu District, Shanghai
             </p>
 
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[March, 2021] I will join the TPC of <a href="https://www.icics.cn/Cfp.html">ICICS 2021</a>. Welcome to submit!</li>
                     <li>[March, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Jiarun! <br/> 
                         <i>>>> When a vulnerability is discovered by fuzzers on one software version, it is important to assess whether there are other versions that are also affected by this vulneabilty.           
                             We introduce a new technique, named <b>PoC Migration</b>, to assess the vulnerable versions of a known vulnerability.
@@ -551,6 +552,7 @@
             <div>TPC Member:<br>
                 <ul>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
+                    <li>the 23rd International Conference on Information and Communications Security (ICICS 2021)</i>
                     <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
                     <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
                     <li>the 11th ACM Conference on Data and Application Security and Privacy (CODASPY 2021)</i>
