--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[April, 2021] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity22/call-for-papers">USENIX Security 2022</a>. Welcome to submit!</li>
                     <li>[March, 2021] I will join the TPC of <a href="https://www.icics.cn/Cfp.html">ICICS 2021</a>. Welcome to submit!</li>
                     <li>[March, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Jiarun! <br/> 
                         <i>>>> When a vulnerability is discovered by fuzzers on one software version, it is important to assess whether there are other versions that are also affected by this vulneabilty.           
@@ -328,10 +329,10 @@
                         <i>>>> In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in malware detection, from the perspective of enhancing feature space abstractions. </i>                        
                     </li>
                     <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li>
-                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
+                    <!-- <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
                         <i>>>> This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
                     <li>[March, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> 
-                        <i>>>> This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
+                        <i>>>> This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li> -->
                     <!--
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2020/">Oakland 2020</a>. Congrats Yuyu & Lei!</li>
@@ -551,6 +552,7 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
+                    <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 23rd International Conference on Information and Communications Security (ICICS 2021)</i>
                     <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
