--- a/index.html
+++ b/index.html
@@ -309,6 +309,11 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[May, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Xin! <br/> 
+                        <i>>>> We observe that the security patch information for disclosed OSS vulnerabilities in CVE/NVD is usually incomplete and incorrect. 
+                            To ease the locating of security patches, we propose PatchScout which ranks the code commits 
+                            in the OSS code repository based on their correlations to a given vulnerability.  </i>             
+                    </li>
                     <li>[April, 2021] I will join the TPC of <a href="https://www.usenix.org/conference/usenixsecurity22/call-for-papers">USENIX Security 2022</a>. Welcome to submit!</li>
                     <li>[March, 2021] I will join the TPC of <a href="https://www.icics.cn/Cfp.html">ICICS 2021</a>. Welcome to submit!</li>
                     <li>[March, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Jiarun! <br/> 
@@ -358,6 +363,12 @@
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
                 <ol>   
+                    <li>
+                        <div class="title">Locating the Security Patches for Disclosed OSS Vulnerabilities with Vulnerability-Commit Correlation Ranking.</div>
+                        <div class="author">Xin Tan, Yuan Zhang, Chenyuan Mi, Jiajun Cao, Kun Sun, Yifan Lin, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 28th ACM Conference on Computer and Communications Security (CCS), Seoul, South Korea, November 14-19, 2021 (coming soon).
+                        </div>
+                    </li>                      
                     <li>
                         <div class="title">Facilitating Vulnerability Assessment through PoC Migration.</div>
                         <div class="author">Jiarun Dai, Yuan Zhang, Hailong Xu, Haiming Lyu, Zicheng Wu, Xinyu Xing, Min Yang.</div>
@@ -595,7 +606,7 @@
             </div-->
 
             <br>
-            <center><small>Last Modified: Feb 1, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: May 6, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
