--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
+                    <li>[May, 2021] I will join the Editorial Board of <a href="https://www.springer.com/journal/10664">Empirical Software Engineering Journal</a>.  More information can be found <a href="https://emsejournal.github.io">here</a>. Welcome to submit!</li>
                     <li>[May, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Xin! <br/> 
                         <i>>>> We observe that the security patch information for disclosed OSS vulnerabilities in CVE/NVD is usually incomplete and incorrect. 
                             To ease the locating of security patches, we propose PatchScout which ranks the code commits 
@@ -561,10 +563,11 @@
 
             <hr size=2>
             <h3><a name="services">Services</a></h3>
-            <div>TPC Member:<br>
+            <div>Technical Program Committee:<br>
                 <ul>
-                    <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
+                    <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
+                    <li>the 17th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2022)</i>
                     <li>the 23rd International Conference on Information and Communications Security (ICICS 2021)</i>
                     <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
                     <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
@@ -574,11 +577,15 @@
                     <li>the 25th European Symposium on Research in Computer Security (ESORICS 2020)</i>
                 </ul>
             </div>
+            <div>Editorial Board:<br>
+                <ul>
+                    <li><a href="https://www.springer.com/journal/10664">Empirical Software Engineering Journal</a> (EMSE), 2021-now</li>
+                </ul>
             <div>Journal Reviewer:<br>
                 <ul>
                     <li>IEEE Transactions on Network and Service Management 2020</li>
                     <li>Computer Communications 2020</li>
-                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020</li>
+                    <li>Computer & Security 2016, 2017, 2018, 2019, 2020, 2021</li>
                     <li>Journal of Software 2016, 2017, 2018, 2019, 2020</li>
                     <li>IEEE Transactions on Dependable and Secure Computing (TDSC) 2018, 2019</li>
                     <li>IEEE Transactions on Mobile Computing (TMC) 2016</li>
@@ -606,7 +613,7 @@
             </div-->
 
             <br>
-            <center><small>Last Modified: May 6, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: May 14, 2021, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
