--- a/index.html
+++ b/index.html
@@ -309,6 +309,8 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
+                    </li>
                     <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
                     <li>[May, 2021] I will join the Editorial Board of <a href="https://www.springer.com/journal/10664">Empirical Software Engineering Journal</a>.  More information can be found <a href="https://emsejournal.github.io">here</a>. Welcome to submit!</li>
                     <li>[May, 2021] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2021/">CCS 2021</a>. Congrats Xin! <br/> 
@@ -330,12 +332,12 @@
                     <li>[Sep, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity21">USENIX Security 2021</a>. Congrats Xin & Xiyu! <br/> 
                         <i>>>> This paper presents CID, a bug detector for reference counting bugs with a novel two-dimensional consistency checking design. By applying CID to <u>the latest Linux kernel (5.6-rc2)</u>, we found 44 new bugs and the patches for the 34 bugs have already been merged into the kernel.</i>                        
                     </li>
-                    <li>[Aug, 2020] Moved to the beautiful Jiangwan campus, welcome to visit us!</li>
+                    <!-- <li>[Aug, 2020] Moved to the beautiful Jiangwan campus, welcome to visit us!</li>
                     <li>[Aug, 2020] Join the TPC of <a href="http://www.codaspy.org/2021/cfp.html">CODASPY 2021</a>. Welcome to submit!</li>
                     <li>[July, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Xiaohan! <br/> 
                         <i>>>> In this paper, we introduce a new concept, named <b>API semantics</b>, to tackle model aging (a long-standing problem) in malware detection, from the perspective of enhancing feature space abstractions. </i>                        
                     </li>
-                    <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li>
+                    <li>[July, 2020] Join the TPC of <a href="https://asiaccs2021.comp.polyu.edu.hk/datescalls/call-for-papers/">AsiaCCS 2021</a>. Welcome to submit!</li> -->
                     <!-- <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> 
                         <i>>>> This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
                     <li>[March, 2020] One paper accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> 
@@ -364,7 +366,13 @@
             <hr size=2>
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
-                <ol>   
+                <ol>
+                    <li>
+                        <div class="title">Exploit The Last Straw that Breaks Android System.</div>
+                        <div class="author">Lei Zhang, Keke Lian, Haoyu Xiao, Zhibo Zhang, Peng Liu, Yuan Zhang, Min Yang, Haixin Duan.</div>
+                        <div class="venue">In Proceedings of the 43rd IEEE Symposium on Security and Privacy (S&P), May 22-26, 2022 (coming soon).
+                        </div>
+                    </li>                      
                     <li>
                         <div class="title">Locating the Security Patches for Disclosed OSS Vulnerabilities with Vulnerability-Commit Correlation Ranking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Chenyuan Mi, Jiajun Cao, Kun Sun, Yifan Lin, Min Yang.</div>
@@ -563,6 +571,14 @@
 
             <hr size=2>
             <h3><a name="services">Services</a></h3>
+            <div>Organization<br>
+                <ul>
+                    <li>Session Chair for Inscrypt 2021</i>
+                    <li>Session Chair for AsiaCCS 2021</i>
+                    <li>Session Chair for NDSS 2021 (AP Replay Session)</i>
+                    <li>Organization/Technical Commitee Member of InForSec</i>
+                </ul>
+            </div>
             <div>Technical Program Committee:<br>
                 <ul>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
