--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
                     <li>
                         <div class="title">Detecting Kernel Refcount Bugs with Two-Dimensional Consistency Checking.</div>
                         <div class="author">Xin Tan, Yuan Zhang, Xiyu Yang, Kangjie Lu, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium (USENIX Security), Vancouver, Canada, August 11-13, 2021 (coming soon).
+                        <div class="venue">In Proceedings of the 30th USENIX Security Symposium (USENIX Security), Vancouver, Canada, August 11-13, 2021.
+                            <a href="./paper/cid-security21.pdf">[Paper]</a>
                         </div>
                     </li>   
                     <li>
@@ -596,6 +597,7 @@
             <div>Editorial Board:<br>
                 <ul>
                     <li><a href="https://www.springer.com/journal/10664">Empirical Software Engineering Journal</a> (EMSE), 2021-now</li>
+                    <li>Journal of Software (<i>Special Issue: System Software Security Track, in Chinese</i>), 2021</li>
                 </ul>
             <div>Journal Reviewer:<br>
                 <ul>
