--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Sept, 2021] I will join the TPC of <a href="https://www2022.thewebconf.org/cfp/research/security/">WWW 2022</a> (Security, Privacy, and Trust Track). Welcome to submit!</li>
                     <li>[Aug, 2021] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2022/">IEEE S&P 2022</a>. Congrats Lei & Keke! <br/>  
                     </li>
                     <li>[May, 2021] I will join the TPC of <a href="https://asiaccs2022.conferenceservice.jp/dateandcall/callforpapers/">AsiaCCS 2022</a>. Welcome to submit!</li>
@@ -584,7 +585,9 @@
                 <ul>
                     <li>the 43rd IEEE Symposium on Security and Privacy (S&P 2022)</i>
                     <li>the 31st USENIX Security Symposium (USENIX Security 2022)</i>
+                    <li>the 31st International World Wide Web Conference, <i>Track: Security, Privacy, and Trust</i> (WWW 2022)</i>                    
                     <li>the 17th ACM ASIA Conference on Computer and Communications Security (AsiaCCS 2022)</i>
+                    <!-- <li>the 27th IEEE International Conference on Parallel and Distributed Systems, <i>Track: Security & Blockchain</i> (ICPADS 2021)</li> -->
                     <li>the 23rd International Conference on Information and Communications Security (ICICS 2021)</i>
                     <li>the 26th European Symposium on Research in Computer Security (ESORICS 2021)</i>
                     <li>the 6th IEEE European Symposium on Security and Privacy (EuroS&P 2021)</i>
